# prompt-pilot-cli

./: .env  .pypirc  README.md  brain.py  main.py  prompt_history.json  pyproject.toml
src/ayyappan_pilot_orchestrator_sit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/prompt_pilot/: brain.py  main.py
