[project]
name = "prompt-pilot-cli"
version = "0.1.0"
dependencies = [
    "typer[all]",
    "rich",
    "groq",
    "python-dotenv",
    "pyperclip",
]

[project.scripts]
pilot = "prompt_pilot.main:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"